# commit-concatenate

./: .gitignore  README.md  db.sqlite3  outp.txt  pyproject.toml  pytest.ini  test.py
.github/workflows/: django.yml  mypy.yml  pytest.yaml  ruff.yaml
app/: settings.py  urls.py
app/app/: settings.py  urls.py
app/commit_concatenate/: apps.py  urls.py  views.py
app/commit_concatenate/templates/: base.html
app/commit_concatenate/templates/commit_concatenate/: index.html
commit_concatenate/: SQL.py  apps.py  db.py  form_table.py  github_parcer.py  github_parcer_new.py  github_parcer_new_new.py  github_parcer_old.py  github_parcer_old_old.py  leetcode_parcer.py  models.py  outp.txt  tests.py  urls.py  views.py
commit_concatenate/migrations/: 0001_initial.py
commit_concatenate/static/: css.css
commit_concatenate/templates/: base.html  grid.html  home.html  login.html  reg.html
commit_concatenate/templates/accounts/: login.html
commit_concatenate/templates/commit_concatenate/: index.html
commit_concatenate/templates/registration/: login.html  reg-depr.html
tests/: commit1.json  commit2.json  consts.py  page.json  test_github_parser.py
