# [project]
# requires-python = ">=3.5"

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true


[tool.ruff]
line-length = 80

[tool.pytest.ini_options] 
pythonpath = ['.']
