# [project]
# requires-python = ">=3.5"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["_old.py$", "^manage.py$", "tests.*", "sql_app.*"]
# mypy_path = "./.venv"

[tool.django-stubs]
django_settings_module = "app.settings"

[[tool.mypy.overrides]] 
module = ["sql_app.*"]
ignore_errors = true


[tool.ruff]
line-length = 80

[tool.pytest.ini_options] 
pythonpath = ['.']
